--- a/src/public/home-styles.css
+++ b/src/public/home-styles.css
@@ -397,7 +397,7 @@ body {
 .article-big .emition-image-container {
     width: 100%;
     height: 60%;
-    min-height: 60%;
+    max-height: 60%;
     background-color: rgba(220, 20, 60, 0);
 }
 
@@ -411,13 +411,15 @@ body {
 .article-small {
     display: flex;
     flex-flow: row;
+    max-height: 20vh;
+    background-color: rgba(65, 65, 65, 0.432);
 }
 
 .article-small .emition-image-container {
-    width: 50%;
-    min-width: 50%;
-    height: 80%;
-    min-height: 80%;
+    width: 30%;
+    min-width: 30%;
+    height: 20vh;
+    max-height: 20vh;
     margin-right: 4%;
     background-color: crimson;
 }
