--- a/src/views/partials/profile_edit_column.hbs
+++ b/src/views/partials/profile_edit_column.hbs
@@ -4,7 +4,8 @@
         <div class="n-form">
             <input type="hidden" name="id" id="_id" value="{{column._id}}">
             <label for="url">Escriba la URL de la noticia</label>
-            <input id="url" class="n-input" type="text" name="url" value="{{column.url}}" placeholder="Escriba la URL de la noticia">
+            <input id="url" class="n-input" type="text" name="url" value="{{column.url}}"
+                placeholder="Escriba la URL de la noticia">
             <label for="title">Escriba su título</label>
 
             <input id="title" class="n-input" type="text" name="title" placeholder="Escriba un título"
@@ -136,11 +137,26 @@
             name = name.toString();
             form.append('image', thumbnailBinaryData, name + "small.jpeg");
             fetch(`/columns/fulledit/${columnId.value}`, { method: "POST", body: form })
-               .then(function (response) {
+                .then(function (response) {
                     console.log(response.status);
                     if (response.status === 201) {
                         console.log("done");
                         window.location.assign("/admin/profile");
+                    } else if (response.status === 999) {
+                        console.log(response);
+                        var error_m = document.createElement('div');
+                        error_m.classList.add('error_div');
+                        var error_p = document.createTextNode('Recuerda que la URL debe contener sólo letras, números y usar guiones en vez de espacios');
+                        error_m.appendChild(error_p);
+                        document.body.appendChild(error_m);
+                        const x = document.querySelectorAll(".error_div");
+                        for (let i = 0; i < x.length; i++) {
+                            for (i = 0; i < x.length; i++) {
+                                x[i].addEventListener("click", (target) => {
+                                    target.path[1].removeChild(target.path[0]);
+                                });
+                            }
+                        }
                     } else {
                         window.location.assign("/");
                     }
@@ -157,6 +173,21 @@
                     if (response.status === 201) {
                         console.log("done");
                         window.location.assign("/admin/profile");
+                    } else if (response.status === 999) {
+                        console.log(response);
+                        var error_m = document.createElement('div');
+                        error_m.classList.add('error_div');
+                        var error_p = document.createTextNode('Recuerda que la URL debe contener sólo letras, números y usar guiones en vez de espacios');
+                        error_m.appendChild(error_p);
+                        document.body.appendChild(error_m);
+                        const x = document.querySelectorAll(".error_div");
+                        for (let i = 0; i < x.length; i++) {
+                            for (i = 0; i < x.length; i++) {
+                                x[i].addEventListener("click", (target) => {
+                                    target.path[1].removeChild(target.path[0]);
+                                });
+                            }
+                        }
                     } else {
                         window.location.assign("/");
                     }
