--- a/src/views/partials/profile_add_emitions.hbs
+++ b/src/views/partials/profile_add_emitions.hbs
@@ -99,17 +99,32 @@
         form.append('date', date);
         fetch("/emitions/add", { method: "POST", body: form })
             .then(function (response) {
-                    console.log(response.status);
-                    if (response.status === 201) {
-                        console.log("done");
-                        window.location.assign("/admin/profile");
-                    } else {
-                        window.location.assign("/");
+                console.log(response.status);
+                if (response.status === 201) {
+                    console.log("done");
+                    window.location.assign("/admin/profile");
+                } else if (response.status === 999) {
+                    console.log(response);
+                    var error_m = document.createElement('div');
+                    error_m.classList.add('error_div');
+                    var error_p = document.createTextNode('Recuerda que la URL debe contener sólo letras, números y usar guiones en vez de espacios');
+                    error_m.appendChild(error_p);
+                    document.body.appendChild(error_m);
+                    const x = document.querySelectorAll(".error_div");
+                    for (let i = 0; i < x.length; i++) {
+                        for (i = 0; i < x.length; i++) {
+                            x[i].addEventListener("click", (target) => {
+                                target.path[1].removeChild(target.path[0]);
+                            });
+                        }
                     }
-                })
-                .catch(function (err) {
-                    console.log(err);
-                });
+                } else {
+                    window.location.assign("/");
+                }
+            })
+            .catch(function (err) {
+                console.log(err);
+            });
     }
 
     //  Creating a CKEDITOR instance only when everithing is loaded
