--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -4,10 +4,10 @@
         </a>
         <div class="button-listen-now font-crimson"><span>ESCUCHAR AHORA!</span></div>
         <ul class="nav-list">
-            <li><a href="/news" class="nav-link font-crimson">NOTICIAS</a></li>
-            <li><a href="/columns" class="nav-link font-crimson">RECORTES</a></li>
-            <li><a href="/emitions" class="nav-link font-crimson">EMISIONES</a></li>
-            <li><a href="/contact" class="nav-link font-crimson">CONTACTO</a></li>
+            <li><a href="/all/news" class="nav-link font-crimson">NOTICIAS</a></li>
+            <li><a href="/all/columns" class="nav-link font-crimson">RECORTES</a></li>
+            <li><a href="/all/emitions" class="nav-link font-crimson">EMISIONES</a></li>
+            <li><a href="/all/contact" class="nav-link font-crimson">CONTACTO</a></li>
         </ul>
 
     </nav>
@@ -15,10 +15,10 @@
         <div id="close-button" class="close-button"><span>+</span></div>
         <h2 class="font-crimson">MENU</h2>
         <ul class="nav-list">
-           <li><a href="/news" class="nav-link font-crimson">NOTICIAS</a></li>
-            <li><a href="/columns" class="nav-link font-crimson">RECORTES</a></li>
-            <li><a href="/emitions" class="nav-link font-crimson">EMISIONES</a></li>
-            <li><a href="/contact" class="nav-link font-crimson">CONTACTO</a></li>
+           <li><a href="/all/news" class="nav-link font-crimson">NOTICIAS</a></li>
+            <li><a href="/all/columns" class="nav-link font-crimson">RECORTES</a></li>
+            <li><a href="/all/emitions" class="nav-link font-crimson">EMISIONES</a></li>
+            <li><a href="/all/contact" class="nav-link font-crimson">CONTACTO</a></li>
         </ul>
         <div class="socials-footer">
             <a href="" class="img-container">
