--- a/src/public/home-styles.css
+++ b/src/public/home-styles.css
@@ -401,7 +401,6 @@ body {
     background-color: rgba(220, 20, 60, 0);
 }
 
-
 .emition-image-container .emition-img {
     width: 100%;
     min-height: 100%;
@@ -414,7 +413,6 @@ body {
     flex-flow: row;
     max-height: 20vh;
     max-width: 50vw;
-    background-color: rgba(65, 65, 65, 0.432);
 }
 
 .article-small .custom-headline {
@@ -608,6 +606,8 @@ body {
         flex-flow: row;
         background-color: rgba(255, 251, 251, 0.08);
         padding-right: 2%;
+        max-height: unset;
+        max-width: unset;
     }
     .article-big .emition-image-container, .article-small .emition-image-container {
         width: 30%;
@@ -805,6 +805,16 @@ body {
     .news .article-1, .news .article-2, .news .article-3, .news .article-4, .news .article-5, .news .article-6, .emitions .article-big, .emitions .article-small {
         display: flex;
         flex-flow: column;
+    }
+
+    .article-small{
+        max-height: unset;
+        max-width: unset;
+    }
+
+    .article-small .clamp{
+        max-height: unset;
+        max-width: unset;
     }
     .news .article-1 .news-image-container, .news .article-2 .news-image-container, .news-image-container-small, .article-big .emition-image-container, .article-small .emition-image-container {
         position: relative;
