Fixed links to the actual content.
Now the img container and the title have the correct routes to ask the database

--- a/src/views/all_news.hbs
+++ b/src/views/all_news.hbs
@@ -41,12 +41,12 @@
     <div id="grid-container" class="grid-container">
         {{#each news}}
         <div class="article">
-            <div class="img-container"><a href="/news/{{url}}"><img src="{{thumbnail}}"></a></div>
+            <div class="img-container"><a href="/contents/news/{{url}}"><img src="{{thumbnail}}"></a></div>
             <div class="info">
                 <div class="container">
                     <span class="date">{{date}}</span>
 
-                    <a href="/news/{{url}}">
+                    <a href="/contents/news/{{url}}">
 
                         <h2 class="article-title">{{title}}</h2>
                     </a>
