--- a/src/public/content.css
+++ b/src/public/content.css
@@ -218,8 +218,11 @@ a {
 }
 
 .main .article .description {
-    opacity: 0.8;
     margin: 5vh auto;
+}
+
+.main .article .description p {
+    opacity: 0.8;
 }
 
 .author-sharers-container {
@@ -247,6 +250,7 @@ a {
 .author-img {
     width: 100%;
     max-height: 100%;
+    height: 100%;
     object-fit: cover;
     border-radius: 100%;
 }
@@ -276,7 +280,8 @@ a {
 }
 
 .main-media {
-    height: auto;
+    height: 70vh;
+    max-height:70vh;
     width: 95%;
     margin: 5% auto 3% 1%;
 }
@@ -284,6 +289,14 @@ a {
 .main-media iframe {
     margin-bottom: 0;
     height: 70vh;
+    width: 100%;
+}
+
+.main-media img {
+    display: block;
+    max-height: 100%;
+    height: 100%;
+    object-fit: cover;
     width: 100%;
 }
 
@@ -466,7 +479,7 @@ a {
 }
 
 @media only screen and (max-width: 950px) {
-    .section-title{
+    .section-title {
         text-align: center;
     }
     .small-header {
@@ -581,7 +594,7 @@ a {
         display: block;
         top: unset
     }
-    .main .article{
+    .main .article {
         margin-bottom: -10vh
     }
     .last-episode {
@@ -617,19 +630,15 @@ a {
 @media screen and (max-width: 700px) {
     .author-sharers-container {
         width: 100%;
-        flex-flow: column;        
+        flex-flow: column;
         justify-content: center;
         padding-top: 1%;
         border-top: 1px solid rgba(255, 255, 255, 0.151);
     }
-    
     .author-info {
         width: 100%;
         margin-bottom: 5%;
-        
     }
-    
-
     .socials-sharers {
         position: relative;
         width: 100%;
@@ -638,13 +647,10 @@ a {
         flex-flow: row;
         justify-content: space-between;
     }
-    
     .socials-sharers .img-container {
         width: 5vh;
         height: 5vh;
     }
-    
-    
     .columns {
         margin-top: 3vh;
         height: auto;
@@ -715,7 +721,7 @@ a {
     .small-header {
         background-position-x: 30%;
     }
-    .article-title{
+    .article-title {
         font-size: 165%;
     }
     .suscribe {
