Updated edit views
+Added a partial with some provisory styles to print the errors
+This includes the edit_news edit_columns edit_emitions

--- a/src/views/users/update_content/profile_edit_column.hbs
+++ b/src/views/users/update_content/profile_edit_column.hbs
@@ -2,7 +2,7 @@
 
 <div class="dashboard">
     {{>profile_sidebar}}
-
     {{>profile_edit_column}}
     {{>profile_helper_cropper}}
 </div>
+{{>error_div_style}}
