Updated edit_emitions partial
+Added javascript in order to handle custom response error made from the server and print an error message

--- a/src/views/partials/profile_edit_emition.hbs
+++ b/src/views/partials/profile_edit_emition.hbs
@@ -145,6 +145,21 @@
                         console.log(response);
                         var error_m = document.createElement('div');
                         error_m.classList.add('error_div');
+                        var error_p = document.createTextNode('El link de youtube debe ser sólo un fucking link de youtube!');
+                        error_m.appendChild(error_p);
+                        document.body.appendChild(error_m);
+                        const x = document.querySelectorAll(".error_div");
+                        for (let i = 0; i < x.length; i++) {
+                            for (i = 0; i < x.length; i++) {
+                                x[i].addEventListener("click", (target) => {
+                                    target.path[1].removeChild(target.path[0]);
+                                });
+                            }
+                        }
+                    } else if (response.status === 999) {
+                        console.log(response);
+                        var error_m = document.createElement('div');
+                        error_m.classList.add('error_div');
                         var error_p = document.createTextNode('Recuerda que la URL debe contener sólo letras, números y usar guiones en vez de espacios');
                         error_m.appendChild(error_p);
                         document.body.appendChild(error_m);
